# RL_Voxel-Agent_PPO

./: .gitignore  COPYING  README.md  RL_Voxel_V1.gh  RL_Voxel_V3.gh  RL_Voxel_V3_hops.gh  agent_training.py  boxesOut.py  daylight_analyzer.py  gh_file_runner.py  main.py  notes  pyproject.toml  start_rhino_compute.ps1  temp_reward.json  temp_voxel_input.json  test_daylight_analyzer.py  voxel_env.py  voxel_output.json
gh_files/: Karamba_hops.ghx  RL_Voxel_V3_hops.ghx  RL_Voxel_V4_hops.gh  RL_Voxel_V4_hops.ghx  RL_Voxel_V5_hops.ghx  RL_Voxel_V6_hops.ghx
gh_files/epw/: CAN_BC_Nanaimo.AP.718900_TMYx.epw  CYP_LI_Akrotiri.AFB.176010_TMYx.epw  GBR_ENG_Manchester-Barton.033350_TMYx.epw
output_steps/: step_000.json  step_001.json  step_002.json  step_003.json  step_004.json  step_005.json  step_006.json  step_007.json  step_008.json  step_014.json  step_015.json  step_017.json  step_018.json  step_028.json  step_032.json  step_038.json  step_051.json  step_069.json  step_131.json  step_192.json  step_215.json  step_265.json  step_375.json  step_409.json  step_473.json  step_484.json  step_573.json  step_574.json  step_579.json  step_625.json  step_662.json  step_665.json  step_711.json  step_724.json  step_751.json  step_758.json  step_777.json  step_891.json  step_897.json  step_941.json  (+1 more)
output_steps_vec/: step_000.json  step_001.json  step_002.json  step_003.json  step_004.json  step_005.json  step_006.json  step_007.json  step_008.json  step_009.json  step_010.json  step_011.json  step_012.json  step_013.json  step_014.json  step_015.json  step_016.json  step_017.json  step_018.json  step_019.json  step_020.json  step_021.json  step_022.json  step_023.json  step_024.json  step_025.json  step_026.json  step_027.json  step_028.json  step_029.json  step_030.json  step_031.json  step_032.json  step_033.json  step_034.json  step_035.json  step_036.json  step_037.json  step_038.json  step_039.json  (+61 more)
(+118 files in other folders)
